to avoid layout shift, added styles

--- a/assets/bootstrap/bootstrap.css
+++ b/assets/bootstrap/bootstrap.css
@@ -82,6 +82,7 @@ body {
   background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  max-width: 1440px;
 }
 
 hr {
@@ -293,6 +294,8 @@ figure {
 
 img,
 svg {
+  width: 100%;
+  height: auto; 
   vertical-align: middle;
 }
 
@@ -6121,6 +6124,7 @@ textarea.form-control-lg {
   margin-bottom: 1rem;
   margin-left: 15%;
   list-style: none;
+  contain: layout style;
 }
 .carousel-indicators [data-bs-target] {
   box-sizing: content-box;
@@ -6140,6 +6144,20 @@ textarea.form-control-lg {
   opacity: 0.5;
   transition: opacity 0.6s ease;
 }
+
+@media (min-width: 576px){
+  .carousel-indicators {
+    width:70%;
+    height:22px;
+  }
+}
+@media (max-width: 575px){
+  .carousel-indicators {
+    width:70%;
+    height:15px;
+  }
+}
+
 @media (prefers-reduced-motion: reduce) {
   .carousel-indicators [data-bs-target] {
     transition: none;
@@ -6147,6 +6165,7 @@ textarea.form-control-lg {
 }
 .carousel-indicators .active {
   opacity: 1;
+
 }
 
 .carousel-caption {
