--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,12 @@ body {
 	font-family: 'Inter';
 	font-style: normal;
 }
+
+img{
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
 .top-header {
 	background-color: white;
 	position: sticky;
@@ -40,6 +46,7 @@ body {
 
 .social-link img {
 	width: 20px;
+	height:20px;
 }
 
 #about {
@@ -66,11 +73,6 @@ body {
 	margin: 0 20px;
 	z-index: 0;
 }
-
-.picture img {
-	width: 100%;
-
-}
 #about-me {
 	flex: 2
 }
@@ -91,7 +93,7 @@ body {
 }
 
 #gallery {
-	/*	min-height: 100vh; */
+	min-height: 100vh;
 }
 .title{
 	text-align: center;
